# lnp_ml

./: .dockerignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  cal_features.py  docker-compose-gpu.yml  docker-compose.yml  pixi.toml  pyproject.toml  requirements.txt
app/: PARAM.md  __init__.py  api.py  app.py  optimize.py
data/interim/: internal_corrected.csv
data/processed/: test.parquet  test_results.json  train.parquet  train_pretrain.parquet  val.parquet  val_pretrain.parquet
data/processed/cv/: feature_columns.txt
data/processed/final/: feature_columns.txt  train.parquet  val.parquet
data/processed/pretrain_cv/: feature_columns.txt
data/raw/: internal_deleted_uncorrected.xlsx
lnp_ml/: __init__.py  dataset.py  features.py  plots.py
lnp_ml/featurization/: __init__.py  smiles.py
lnp_ml/modeling/: __init__.py  heads.py  models.py  predict.py  pretrain.py  pretrain_cv.py  train.py  train_cv.py  trainer.py  visualization.py
lnp_ml/modeling/encoders/: __init__.py  mpnn_encoder.py  rdkit_encoder.py  tabular_encoder.py
lnp_ml/modeling/layers/: __init__.py  bidirectional_cross_attention.py  fusion.py  token_projector.py
models/: history.json  pretrain_history.json  pretrain_test_results.json
models/final/: history.json
models/finetune_cv/: config.json  cv_results.json  test_results.json
models/pretrain_cv/: config.json  cv_results.json  test_results.json
scripts/: data_cleaning.py  evaluate_external.py  process_data.py  process_data_cv.py  process_data_final.py  process_external.py  process_external_cv.py
(+26 files in other folders)
