[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lnp_ml"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Wu Dinghong" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.8"


[tool.ruff]
line-length = 99
src = ["lnp_ml"]
include = ["pyproject.toml", "lnp_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["lnp_ml"]
force-sort-within-sections = true

